--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-
-# Created by https://www.gitignore.io/api/git,emacs,macos,ansible,jetbrains+all
+# Created by https://www.toptal.com/developers/gitignore/api/git,emacs,ansible,jetbrains+all,linux,visualstudiocode
+# Edit at https://www.toptal.com/developers/gitignore?templates=git,emacs,ansible,jetbrains+all,linux,visualstudiocode
 
 ### Ansible ###
 *.retry
@@ -51,6 +51,10 @@ flycheck_*.el
 # directory configuration
 .dir-locals.el
 
+# network security
+/network-security.data
+
+
 ### Git ###
 # Created by git for backups. To disable backups in Git:
 # $ git config --global mergetool.keepBackup false
@@ -67,7 +71,7 @@ flycheck_*.el
 *_REMOTE_*.txt
 
 ### JetBrains+all ###
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
@@ -76,6 +80,9 @@ flycheck_*.el
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+
+# AWS User-specific
+.idea/**/aws.xml
 
 # Generated files
 .idea/**/contentModel.xml
@@ -97,9 +104,14 @@ flycheck_*.el
 # When using Gradle or Maven with auto-import, you should exclude module files,
 # since they will be recreated, and may cause churn.  Uncomment if using
 # auto-import.
+# .idea/artifacts
+# .idea/compiler.xml
+# .idea/jarRepositories.xml
 # .idea/modules.xml
 # .idea/*.iml
 # .idea/modules
+# *.iml
+# *.ipr
 
 # CMake
 cmake-build-*/
@@ -122,6 +134,9 @@ atlassian-ide-plugin.xml
 # Cursive Clojure plugin
 .idea/replstate.xml
 
+# SonarLint plugin
+.idea/sonarlint/
+
 # Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
 crashlytics.properties
@@ -135,45 +150,45 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 ### JetBrains+all Patch ###
-# Ignores the whole .idea folder and all .iml files
-# See https://github.com/joeblau/gitignore.io/issues/186 and https://github.com/joeblau/gitignore.io/issues/360
+# Ignore everything but code style settings and run configurations
+# that are supposed to be shared within teams.
 
-.idea/
+.idea/*
 
-# Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-249601023
+!.idea/codeStyles
+!.idea/runConfigurations
 
-*.iml
-modules.xml
-.idea/misc.xml
-*.ipr
+### Linux ###
 
-### macOS ###
-# General
-.DS_Store
-.AppleDouble
-.LSOverride
+# temporary files which can be created if a process still has a handle open of a deleted file
+.fuse_hidden*
 
-# Icon must end with two \r
-Icon
+# KDE directory preferences
+.directory
 
-# Thumbnails
-._*
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
 
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
+# .nfs files are created when an open file is removed but is still being accessed
+.nfs*
 
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
 
+# Local History for Visual Studio Code
+.history/
 
-# End of https://www.gitignore.io/api/git,emacs,macos,ansible,jetbrains+all
+# Built Visual Studio Code Extensions
+*.vsix
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
+
+# End of https://www.toptal.com/developers/gitignore/api/git,emacs,ansible,jetbrains+all,linux,visualstudiocode
