--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,16 +1,19 @@
 galaxy_info:
   author: slashsbin
-  description: Probe and update all packages, development tools and dependencies
+  description: One Ansible role to update them all.
 
   license: MIT
 
   min_ansible_version: 2.6
 
   platforms:
+    - name: ArchLinux
+      versions:
+        - all
     - name: GenericLinux
       versions:
         - all
-    - name: macOS
+    - name: MacOSX
       versions:
         - all
 
