--- a/tasks/homebrew.yml
+++ b/tasks/homebrew.yml
@@ -18,14 +18,8 @@
   homebrew_cask:
     upgrade_all: yes
 
-- name: homebrew cleanup - remove outdated downloads
+- name: homebrew - remove outdated downloads
   tags:
     - homebrew
     - cleanup
   command: brew cleanup
-
-- name: homebrew prune - remove dead symlinks
-  tags:
-    - homebrew
-    - cleanup
-  command: brew prune
