--- a/tasks/apt.yml
+++ b/tasks/apt.yml
@@ -1,26 +1,26 @@
 ---
 
 - name: apt - update package information
-  apt:
-    update_cache: true
+  ansible.builtin.apt:
+    update_cache: yes
   become: true
   ignore_errors: true
 
 - name: apt - upgrade all packages to the latest version
-  apt:
+  ansible.builtin.apt:
     upgrade: dist
   become: true
 
 - name: apt - remove useless packages from the cache
   tags:
     - cleanup
-  apt:
+  ansible.builtin.apt:
     autoclean: yes
   become: true
 
 - name: apt - remove dependencies that are no longer required
   tags:
     - cleanup
-  apt:
+  ansible.builtin.apt:
     autoremove: yes
   become: true
