--- a/tasks/composer.yml
+++ b/tasks/composer.yml
@@ -6,11 +6,11 @@
   debug:
     msg:
       - 'composer executable path: {{ mega_update_composer.stdout }}'
-    verbosity: 1
+    verbosity: 0
 
 - name: composer - update composer itself to the latest version
   community.general.composer:
-    ansible.builtin.command: self-update
+    command: self-update
     global_command: yes
 
 - name: composer - determine composer global home path
@@ -27,7 +27,7 @@
 
 - name: composer - check composer global dependencies file exists
   ignore_errors: true
-  stat:
+  ansible.builtin.stat:
     path: '{{ mega_update_composer_global_home}}/composer.json'
   register: mega_update_composer_global_dependencies
   when: mega_update_composer_global_home is defined
