--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,2 +1,6 @@
 [defaults]
+# This adds output that shows when a task is started to execute for each host
 show_per_host_start = yes
+
+# ansible.builtin.default callback - Define the task result format used in the callback output.
+callback_result_format = yaml
