Switch role path from relative path to role name, fixing Ansible lint issue

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,7 @@
 [defaults]
+# Colon separated paths in which Ansible will search for Roles.
+roles_path = ../
+
 # This adds output that shows when a task is started to execute for each host
 show_per_host_start = true
 
