Configure pretty format of the default callback pluggin

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -7,3 +7,6 @@ show_per_host_start = true
 
 # ansible.builtin.default callback - Define the task result format used in the callback output.
 callback_result_format = yaml
+
+# Configure the result format to be more readable
+callback_format_pretty = true
