--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -23,7 +23,9 @@
   tags:
     - composer
   import_tasks: composer.yml
-  when: mega_update_composer is succeeded
+  when:
+    - mega_update_composer is defined
+    - mega_update_composer is succeeded
 
 # Docker
 - name: Docker - gather facts on docker host
